feat(student menu): add jline for robust console input, fix courses - enroll course offering menu